fix bug where questions are not showing up

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -97,7 +97,7 @@ form, .form-group{
   flex-direction: column;
   margin-bottom: 10%;
 }
-label{
+label, .question-text{
   margin-top: 5px;
   color:white;
 }
